rename function and views

--- a/stripe_simple/templates/stripe_simple/item.html
+++ b/stripe_simple/templates/stripe_simple/item.html
@@ -8,7 +8,7 @@
 <script>
     var stripe = Stripe('pk_test_51M5Ej5AOiYw02tQNODQIZcVlMHpQwLf8ThvFGt1vB96eAjXxR6jUzKC7ngioFL3SkTXjnmLhyhrSxk6xd2Sw6kHK00FH2Jo0Ew');
     function createCheckoutSession() {
-        fetch('/get_session/{{ item.pk }}/', {method: 'GET'})
+        fetch('/buy/{{ item.pk }}/', {method: 'GET'})
         .then(response => response.json())
         .then(session => stripe.redirectToCheckout({ sessionId: session.id }))
     }
